<resources>
    <string name="app_name">T.R.A.C.K.</string>
    <string name="app_full_name">Premier T.R.A.C.K.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="premiers_take_5">Premier\'s Risk and Hazard Reporting Tool</string>
    <string name="welcome_text">Welcome to Premier T.R.A.C.K.</string>
    <string name="app_info_text">Premier\'s Hazard Recognition Tool.\n\n\nT - Think through the task.\nR - Recognize the hazards.\nA - Assess the risks.\nC - Control the hazards.\nK - Keep safety first.</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_logout">Logout</string>
    <string name="message_text_time">Timestamp</string>
    <string name="choose_an_email_client">Choose an email client: </string>
    <string name="login_button_text">Login</string>
    <string name="user_name_hint">Name</string>
    <string name="user_email_hint">Email</string>
    <string name="supers_email_hint">Supervisor\'s Email (optional)</string>
    <string name="logout_confirmation_text">Are you sure you want to log out?</string>
    <string name="no_text">No</string>
    <string name="yes_text">Yes</string>
    <string name="send_text">Send email to Supervisor</string>
    <string name="settings_text">Settings</string>
    <string name="report_hazard_text">T.R.A.C.K. Hazard</string>
    <string name="email_risk_button">email Hazard</string>
    <string name="ok_text">OK</string>
    <string name="title_login_error">Login Error</string>
    <string name="login_error_text">User name and email required to login.</string>
    <string name="title_email_error">Email Error</string>
    <string name="email_error_text">All questions must be answered before emailing hazard report.</string>
    <string name="pref_login_default">Remember</string>
    <string name="pref_login_label">Login Options</string>
    <string name="pref_login_key">login</string>
    <string name="section1_question1_text">Sample question #1.</string>
    <string name="section1_question2_text">Sample question #2.</string>
    <string name="section1_question3_text">Sample question #3.</string>
    <string name="section2_question1_text">Sample question #1.</string>
    <string name="section2_question2_text">Sample question #2.</string>
    <string name="section2_question3_text">Sample question #3.</string>
    <string name="section3_question1_text">Sample question #1.</string>
    <string name="section3_question2_text">Sample question #2.</string>
    <string name="section3_question3_text">Sample question #3.</string>
    <string name="section4_question1_text">Sample question #1.</string>
    <string name="section4_question2_text">Sample question #2.</string>
    <string name="section4_question3_text">Sample question #3.</string>
    <string name="section5_question1_text">Sample question #1.</string>
    <string name="section5_question2_text">Sample question #2.</string>
    <string name="section5_question3_text">Sample question #3.</string>
    <string name="message_text_1">HAZARD Text 1</string>
    <string name="message_text_2">HAZARD Text 2</string>
    <string name="message_text_3">HAZARD Text 3</string>
    <string name="message_text_4">HAZARD Text 4</string>
    <string name="message_text_5">HAZARD Text 5</string>
    <string name="email_message_subject">Premier T.R.A.C.K Hazard Report</string>
    <string name="section_1_text">Section 1 - THINK through the task</string>
    <string name="section_2_text">Section 2 - RECOGNIZE the hazards</string>
    <string name="section_3_text">Section 3 - ASSESS the risks</string>
    <string name="section_4_text">Section 4 - CONTROL the hazards</string>
    <string name="section_5_text">Section 5 - KEEP SAFETY FIRST</string>

</resources>
